[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/Piano/note_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Piano/PianoNote.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 41.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.717, 2.5 )

[node name="PianoNote" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -40.5 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ResponsivenessTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="ResponsivenessTimer" to="." method="_on_ResponsivenessTimer_timeout"]
